[package]
name = "bot-hohmach-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
dotenv = "0.15.0"

reqwest = "0.12"
serenity = { features = ["client", "cache", "framework", "gateway", "voice", "http", "rustls_backend"], version = "0.12" }
songbird = { version = "0.5" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
